k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phone-contacts-api
spec:
  selector:
    app: phone-contacts-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
